# non-gravitar

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.org  dev.org  main.cpp  non-gravitar.org
src/common/: CMakeLists.txt  COLORS.hpp  CONTROLS.hpp  GAME.hpp
src/common/animations/: CMakeLists.txt  SceneTransitionOverlay.cpp  SceneTransitionOverlay.hpp  SceneTransitionUiContent.cpp  SceneTransitionUiContent.hpp
src/common/camera/: CMakeLists.txt  CameraControls.cpp  CameraControls.hpp
src/common/camera/follow/: AutoZoomCamera.cpp  AutoZoomCamera.hpp  CMakeLists.txt  CameraFollow.cpp  CameraFollow.hpp  SmoothCamera.cpp  SmoothCamera.hpp
src/common/map-generation/: CMakeLists.txt
src/common/map-generation/generator/: BasicEnemyBuildData.hpp  BigEnemyBuildData.hpp  CMakeLists.txt  CratePersistentData.hpp  EnemyBuildData.hpp  EnemyPersistentData.hpp  FuelCratePersistentData.cpp  FuelCratePersistentData.hpp  MapGenInfo.cpp  MapGenInfo.hpp  MapGenerator.cpp  MapGenerator.hpp  PlanetoidPopulator.cpp  PlanetoidPopulator.hpp  Region.cpp  Region.hpp  RegionDistanceData.cpp  RegionDistanceData.hpp
src/common/map-generation/generator/marching-squares/: CMakeLists.txt  MarchingMap.cpp  MarchingMap.hpp
src/common/map-generation/gradients/: CMakeLists.txt  CircularGradient.cpp  CircularGradient.hpp  EllipticGradient.cpp  EllipticGradient.hpp  Gradient.cpp  Gradient.hpp
src/common/map-generation/planetoid/: CMakeLists.txt  Planetoid.cpp  Planetoid.hpp  PlanetoidData.cpp  PlanetoidData.hpp  PlanetoidPersistentData.cpp  PlanetoidPersistentData.hpp
src/common/noise-generation/: CMakeLists.txt  NoiseMap.cpp  NoiseMap.hpp  Perlin.cpp  Perlin.hpp  PerlinNoise.cpp  PerlinNoise.hpp
src/common/player/: CMakeLists.txt  Player.cpp  Player.hpp  PlayerCannon.cpp  PlayerCannon.hpp  PlayerPersistentData.cpp  PlayerPersistentData.hpp  PlayerSpawnManager.cpp  PlayerSpawnManager.hpp  TractorBeam.cpp  TractorBeam.hpp
src/common/player/player_body/: CMakeLists.txt  PlayerBody.cpp  PlayerBody.hpp  PlayerEngine.cpp  PlayerEngine.hpp
src/common/player/ui/: CMakeLists.txt  PlayerLivesIndicator.cpp  PlayerLivesIndicator.hpp  PlayerUI.cpp  PlayerUI.hpp  ScoreIndicator.cpp  ScoreIndicator.hpp
src/common/shooting/: CMakeLists.txt
src/common/shooting/bullet/: Bullet.cpp  Bullet.hpp  CMakeLists.txt
src/common/shooting/cannon/: CMakeLists.txt  Cannon.cpp  Cannon.hpp
src/common/utility-classes/: CMakeLists.txt  ColorPalette.cpp  ColorPalette.hpp  Math.cpp  Math.hpp
src/common/utility-logic/: CMakeLists.txt  Fading.cpp  Fading.hpp  PhysicsObject.cpp  PhysicsObject.hpp
src/common/utility-logics/: CollisionTrigger.cpp  CollisionTrigger.hpp  Fading.cpp  Fading.hpp  PhysicsObject.cpp
src/scenes/galaxy-scene/: CMakeLists.txt  GalaxyScene_EntryLogic.cpp  GalaxyScene_EntryLogic.hpp  Galaxy_ConstructionData.hpp  PlanetoidManager.cpp  PlanetoidManager.hpp
src/scenes/galaxy-scene/death-scene/: CMakeLists.txt  DeathSceneEntryLogic.cpp  DeathSceneEntryLogic.hpp  MenuField.cpp  MenuField.hpp  TextMenu.cpp
src/scenes/galaxy-scene/game-scene/: CMakeLists.txt  PlanetoidCorePortal.cpp  PlanetoidCorePortal.hpp  PlanetoidScene_EntryLogic.cpp  PlanetoidScene_EntryLogic.hpp
src/scenes/galaxy-scene/game-scene/breakable/: Breakable.cpp  CMakeLists.txt  Fragment.cpp
src/scenes/galaxy-scene/game-scene/crates/: CMakeLists.txt  Crate.cpp  Crate.hpp
src/scenes/galaxy-scene/game-scene/enemies/: CMakeLists.txt  Enemy.cpp  Enemy.hpp
src/scenes/galaxy-scene/game-scene/planetoids/: PlanetoidManager.cpp  PlanetoidManager.hpp
src/scenes/galaxy-scene/game-scene/scene-transition/: CMakeLists.txt  (+4 more)
src/scenes/galaxy-scene/planetoid-scene/: PlanetoidScene_EntryLogic.cpp
src/scenes/galaxy-scene/scaled-planetoid/: MiniaturePlanetPortal.cpp  MiniaturePlanetPortal.hpp  MiniaturePlanetoid.cpp  MiniaturePlanetoid.hpp
src/scenes/galaxy-scene/scene-transition/: CMakeLists.txt  PlanetoidSceneTransitionTrigger.cpp  PlanetoidSceneTransitionTrigger.hpp  PlanetoidTransitionHandler.cpp  PlanetoidTransitionHandler.hpp  PlayerSceneTransitionTrigger.cpp  PlayerSceneTransitionTrigger.hpp  SceneTransitionHandler.cpp  SceneTransitionHandler.hpp  SolarSystemTransitionHandler.cpp  SolarSystemTransitionHandler.hpp
src/scenes/game-scene/enemies/: BasicEnemy.cpp  BasicEnemy.hpp  BigEnemy.cpp  BigEnemy.hpp  CMakeLists.txt  Enemy.cpp  Enemy.hpp
src/scenes/solar-system-scene/: CMakeLists.txt  PlanetoidManager.cpp  PlanetoidManager.hpp  SolarSystemScene_EntryLogic.cpp  SolarSystemScene_EntryLogic.hpp  SolarSystem_ConstructionData.hpp
src/scenes/solar-system-scene/death-scene/: CMakeLists.txt  DeathSceneEntryLogic.cpp  DeathSceneEntryLogic.hpp  DeathScene_EntryLogic.cpp  DeathScene_EntryLogic.hpp  TextMenu.hpp
src/scenes/solar-system-scene/planetoid-scene/: CMakeLists.txt  PlanetoidScene_EntryLogic.cpp  PlanetoidScene_EntryLogic.hpp
src/scenes/solar-system-scene/scaled-planetoid/: CMakeLists.txt  MiniaturePlanetPortal.cpp  MiniaturePlanetoid.cpp  MiniaturePlanetoid.hpp
src/scenes/solar-system-scene/scene-transition/: CMakeLists.txt  CompletionPrompt.cpp  CompletionPrompt.hpp  PlanetoidSceneTransitionTrigger.hpp  PlanetoidTransitionHandler.cpp  PlanetoidTransitionHandler.hpp  SceneTransitionHandler.cpp  SceneTransitionHandler.hpp  SolarSystemTransitionHandler.cpp  SolarSystemTransitionHandler.hpp
(+192 files in other folders)
